# mcr

./: .gitignore  PROCESS.md  README.md  environment.yml  franka_mcr.py  pixi.toml  pyproject.toml  run.py  run_scene.py  setup_mac.sh  weighted_mcr_experiment.py
assets/datasets/: README.md
assets/urdfs/: fr3v2_local.urdf
configs/objects/: google_scanned_objects_kitchen.yaml  google_scanned_objects_pantry.yaml  household_and_grocery_presets.yaml
configs/scenes/: shelf_packed_cylinders_transfer.yaml  tabletop_cupboard_kitchen_display.yaml  tabletop_dense_household_clutter_reach.yaml  tabletop_kitchen_google_scanned_objects.yaml  tabletop_kitchen_grocery_dataset_staging.yaml  tabletop_kitchen_grocery_objects.yaml  tabletop_pantry_google_scanned_objects.yaml  tabletop_push_rotate_nonprehensile.yaml  tabletop_scattered_cylinders_path_planning.yaml  tabletop_uniform_cylinders_approach_10_objects.yaml  tabletop_uniform_cylinders_approach_20_objects.yaml  tabletop_weighted_contact_costs.yaml
docs/: MCR_BENCHMARK_UI.md  MCR_COMPARE_UI.md  MCR_EXPLAINER.md  SEMANTIC_MCR.md  datasets.md
outputs/mcr_compare_ui/: index.html
scenes/: __init__.py  scene1_mcr_path.py  scene2_approach.py  scene3_transfer.py  scene4_contact_aware.py  scene5_push_rotate.py  scene6_kitchen.py  scene7_cluttered_reach.py  scene_utils.py
scripts/: build_mcr_benchmark_ui.py  build_mcr_compare_ui.py  mcr_core_visualization.py  mcr_semantic_pipeline_visualization.py  normalize_fuel_asset.py
src/mcr/: __init__.py  scene_describe.py
urdfs/: fr3v2_franka_hand.srdf  fr3v2_franka_hand.urdf
(+9 files in other folders)
