[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mcr-robotics"
version = "0.1.0"
description = "Minimum Constraint Removal (MCR) path planning in PyBullet"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pybullet>=3.2",
    "numpy>=1.20",
    "pyyaml>=6.0",
    "scipy>=1.8",
    "matplotlib>=3.5",
    "networkx>=2.8",
]

[tool.setuptools.packages.find]
where = ["src"]
